# tree-sitter-p4

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  build.zig  build.zig.zon  go.mod  grammar.js  package-lock.json  package.json  pnpm-lock.yaml  pom.xml  pyproject.toml  setup.py  tree-sitter.json
.github/workflows/: ci.yml
bindings/c/: tree-sitter-p4.pc.in
bindings/go/: binding.go  binding_test.go
bindings/java/main/io/github/treesitter/jtreesitter/p4/: TreeSitterP4.java
bindings/java/test/: TreeSitterP4Test.java
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_p4/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/zig/: root.zig  test.zig
editors/vscode/: .gitignore  .vscodeignore  README.md  esbuild.mjs  language-configuration.json  package.json
editors/vscode/src/: extension.ts
patches/: tree-sitter@0.25.0.patch
queries/: folds.scm  highlights.scm  indents.scm  injections.scm  locals.scm  tags.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: annotations.txt  controls.txt  declarations.txt  expressions.txt  externs.txt  functions.txt  packages.txt  parsers.txt  statements.txt  tables.txt  type_declarations.txt
